add_executable(eventloop_test EventLoopTest.cc)
target_link_libraries(eventloop_test slite_net)

add_executable(eventloopthread_test EventLoopThreadTest.cc)
target_link_libraries(eventloopthread_test slite_net)

add_executable(eventloopthreadpool_test EventLoopThreadPoolTest.cc)
target_link_libraries(eventloopthreadpool_test slite_net)

add_executable(logger_test LoggerTest.cc)
target_link_libraries(logger_test slite_net)

add_executable(logging_test LoggingTest.cc)
target_link_libraries(logging_test slite_net)

add_executable(asynclogger_test AsyncLoggerTest.cc)
target_link_libraries(asynclogger_test slite_net)

add_executable(reactor_test05 ReactorTest05.cc)
target_link_libraries(reactor_test05 slite_net)

add_executable(tcpclient_test01 TCPClientTest01.cc)
target_link_libraries(tcpclient_test01 slite_net)

add_executable(tcpclient_test02 TCPClientTest02.cc)
target_link_libraries(tcpclient_test02 slite_net)

add_executable(tcpclient_test03 TCPClientTest03.cc)
target_link_libraries(tcpclient_test03 slite_net)

add_executable(threadpool_test ThreadPoolTest.cc)
target_link_libraries(threadpool_test slite_net)
